Adjust the logic between MusicPlayerFacade and MusicPlayer